--- a/DESAFIO-SiteDoAndroid/index.html
+++ b/DESAFIO-SiteDoAndroid/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 
     <!--CSS-->
-    <link rel="stylesheet" href="estilo/style.css"> 
+    <link rel="stylesheet" href="./estilo/style.css"> 
 </head>
 <body>
 
