--- a/Módulo 3 - Git-e-Github/Aula 1-Background-Image/Aula1-background-Image.html
+++ b/Módulo 3 - Git-e-Github/Aula 1-Background-Image/Aula1-background-Image.html
@@ -32,7 +32,7 @@
             background-image: linear-gradient(to bottom, green, white);
         }
 
-        div#q3{ /*colocar uma imagem de fundo com background-image*/
+        div#q3{ /*colocar uma imagem de fundo com background-image PODE SER UMA URL DE UMA IMAGEM DA INTERNET*/
             background-image: url('../IMAGENS/pattern003.png');
             /*só usar a função: url()*/
         }
