--- a/Módulo 3 - Git-e-Github/Aula2-Background-Repeat/Aula2-Background-Repeat.html
+++ b/Módulo 3 - Git-e-Github/Aula2-Background-Repeat/Aula2-Background-Repeat.html
@@ -10,7 +10,7 @@
             background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
 
             background-size: 100px 100px ;/*configura o tamanho FIXO da imagem de fundo
-            100px 100px -> 100 de altura e 100 de altura*/
+            100px 100px -> 100 de largura e 100 de altura*/
 
             background-repeat: no-repeat; /*ele não repete a imagem
             background-repeat: repeat-x; -> repete só no eixo x
